[v1.0][Auth][Update Security config and properties]